Termino do primeiro exercicio HTML

--- a/index.html
+++ b/index.html
@@ -14,21 +14,54 @@
     <br>
     <br>
 
-    <div>
-
-    <p>Essa foto foi tirada quando tive a oportunidade de fazer uma viagem com minha mãe e minha namorada para Florianópolis,
-        está cortada só no meu rosto pois uso ela como foto de perfil do instagram, mas nesse momento eu estava fazendo carinho em 
-        um cachorro que encontramos em uma loja que vendia geléias artesanais.
-    </p>
-    </div>
+<p><em>
+    Essa foto foi tirada quando tive a oportunidade de fazer uma viagem com minha mãe e minha namorada para Florianópolis,
+    está cortada só no meu rosto pois uso ela como foto de perfil do instagram, mas nesse momento eu estava fazendo carinho em 
+    um cachorro que encontramos em uma loja que vendia geléias artesanais.
+</em></p>
     
-<p>Me chamo Gabriel, tenho 24 anos, conheci o mundo dev através do meu cunhado formado pela Trybe, cai aqui de paraquedas pois estava fazendo faculdade
+<!--Seção 1-->
+
+<h4>Descrevendo um pouco sobre mim</h4>
+<p><i>
+    Me chamo Gabriel, tenho 24 anos, conheci o mundo dev através do meu cunhado formado pela Trybe, cai aqui de paraquedas pois estava fazendo faculdade
     de administração e foi a melhor transição de carreira que poderia ter feito na vida.
-</p>
-    <p>Sou nascido e criado no Rio de Janeiro, morei na minha infância até os 10 anos no bairro da Tijuca, zona norte do RJ, depois me mudei com meus 
-        pais para a Barra da Tijuca, e atualmente moro na cidade de Petrópolis com minha mulher que conheci aos 18 anos quando me mudei para cá e com minha 
-        filha de 4 meses.
-    </p>
+</i></p>
+
+<p><i>
+    Sou nascido e criado no Rio de Janeiro, morei na minha infância até os 10 anos no bairro da Tijuca, zona norte do RJ, depois me mudei com meus 
+    pais para a Barra da Tijuca, e atualmente moro na cidade de Petrópolis com minha mulher que conheci aos 18 anos quando me mudei para cá e com minha 
+    filha de 4 meses.
+</i></p>
+
+    <!-- Seção 2 -->
+   
+<h4>Habilidades</h4>
+
+    <ul>
+        <li>Resiliência</li>
+        <li>Comprometimento</li>    
+        <li>Foco</li>    
+    </ul>
+
+    <!-- Seção 3 -->
+
+<h4>Link interno para visualizar minha foto</h4>
+    <a href="http://127.0.0.1:5501/imagens/foto de perfil instagram">Minha foto</a>
+
+    <!--Seção 4-->
+
+<h4>Link externo de um blog que gosto</h4>
+    <a href="https://blog.betrybe.com/">blog da trybe</a>
+
+    <!--Seção 5-->
+
+<h4>Links internos</h4>
+
+    <ul>
+        <li><a href="http://127.0.0.1:5501/index.html#:~:text=Essa%20foto%20foi,vendia%20gel%C3%A9ias%20artesanais.">Descrição da foto</a></li>
+        <li><a href="http://127.0.0.1:5501/index.html#:~:text=de%204%20meses.-,Habilidades,-Resili%C3%AAncia">Link para minhas habilidades</a></li>
+    </ul>
 
 
 
