--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeiro Portifólio Web</title>
+
+<style>
+    img {
+        border-radius: 100%;
+    }
+</style>
+
+
 </head>
 
-<body>
+<body style="background-color: #f0ead2;">
+
+
     <h1><strong>Gabriel Artur Gomes Sancho de Lemos Moreira</strong></h1>
 
    <img src="./imagens/foto de perfil instagram" alt="Minha foto de perfil do instagram" width="200px">
@@ -48,20 +58,20 @@
     <!-- Seção 3 -->
 
 <h4>Link interno para visualizar minha foto</h4>
-    <a href="http://127.0.0.1:5501/imagens/foto de perfil instagram">Minha foto</a>
+    <a href="https://127.0.0.1:5501/imagens/foto de perfil instagram" target="blank">Minha foto</a>
 
     <!--Seção 4-->
 
 <h4>Link externo de um blog que gosto</h4>
-    <a href="https://blog.betrybe.com/">blog da trybe</a>
+    <a href="https://blog.betrybe.com/" target="blank">blog da trybe</a>
 
     <!--Seção 5-->
 
 <h4>Links internos</h4>
 
     <ul>
-        <li><a href="http://127.0.0.1:5501/index.html#:~:text=Essa%20foto%20foi,vendia%20gel%C3%A9ias%20artesanais.">Descrição da foto</a></li>
-        <li><a href="http://127.0.0.1:5501/index.html#:~:text=de%204%20meses.-,Habilidades,-Resili%C3%AAncia">Link para minhas habilidades</a></li>
+        <li><a href="http://127.0.0.1:5501/index.html#:~:text=Essa%20foto%20foi,vendia%20gel%C3%A9ias%20artesanais." target="blank">Descrição da foto</a></li>
+        <li><a href="http://127.0.0.1:5501/index.html#:~:text=de%204%20meses.-,Habilidades,-Resili%C3%AAncia" target="blank">Link para minhas habilidades</a></li>
     </ul>
 
 
