--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
     img {
         border-radius: 100%;
     }
+
+    .nome {
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;  
+    }
+
+    .descrição {
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+
+    .button {
+        color: #ffffff;
+        background-color: #43aa8b;
+        padding: 10px;
+        font-size: 14px;
+        line-height: 20px;
+        font-weight: 600;
+        border-radius: 5px;
+        text-decoration: none;
+
+    }
+
 </style>
 
 
@@ -18,13 +39,13 @@
 <body style="background-color: #f0ead2;">
 
 
-    <h1><strong>Gabriel Artur Gomes Sancho de Lemos Moreira</strong></h1>
+    <h1 class="nome"><strong>Gabriel Artur Gomes Sancho de Lemos Moreira</strong></h1>
 
    <img src="./imagens/foto de perfil instagram" alt="Minha foto de perfil do instagram" width="200px">
     <br>
     <br>
 
-<p><em>
+<p class="descrição"><em>
     Essa foto foi tirada quando tive a oportunidade de fazer uma viagem com minha mãe e minha namorada para Florianópolis,
     está cortada só no meu rosto pois uso ela como foto de perfil do instagram, mas nesse momento eu estava fazendo carinho em 
     um cachorro que encontramos em uma loja que vendia geléias artesanais.
@@ -34,16 +55,16 @@
 
 <h4>Descrevendo um pouco sobre mim</h4>
 
-<p><i>
+<p>
     Me chamo Gabriel, tenho 24 anos, conheci o mundo dev através do meu cunhado formado pela Trybe, cai aqui de paraquedas pois estava fazendo faculdade
     de administração e foi a melhor transição de carreira que poderia ter feito na vida.
-</i></p>
+</p>
 
-<p><i>
+<p>
     Sou nascido e criado no Rio de Janeiro, morei na minha infância até os 10 anos no bairro da Tijuca, zona norte do RJ, depois me mudei com meus 
     pais para a Barra da Tijuca, e atualmente moro na cidade de Petrópolis com minha mulher que conheci aos 18 anos quando me mudei para cá e com minha 
     filha de 4 meses.
-</i></p>
+</p>
 
     <!-- Seção 2 -->
    
@@ -58,20 +79,24 @@
     <!-- Seção 3 -->
 
 <h4>Link interno para visualizar minha foto</h4>
-    <a href="https://127.0.0.1:5501/imagens/foto de perfil instagram" target="blank">Minha foto</a>
+    <a class="button" href="https://127.0.0.1:5501/imagens/foto de perfil instagram" target="blank">Minha foto</a>
 
     <!--Seção 4-->
 
 <h4>Link externo de um blog que gosto</h4>
-    <a href="https://blog.betrybe.com/" target="blank">blog da trybe</a>
+    <a class="button" href="https://blog.betrybe.com/" target="blank">Blog da trybe</a>
+    
 
     <!--Seção 5-->
 
 <h4>Links internos</h4>
 
     <ul>
-        <li><a href="http://127.0.0.1:5501/index.html#:~:text=Essa%20foto%20foi,vendia%20gel%C3%A9ias%20artesanais." target="blank">Descrição da foto</a></li>
-        <li><a href="http://127.0.0.1:5501/index.html#:~:text=de%204%20meses.-,Habilidades,-Resili%C3%AAncia" target="blank">Link para minhas habilidades</a></li>
+        <li><a class="button" href="http://127.0.0.1:5501/index.html#:~:text=Essa%20foto%20foi,vendia%20gel%C3%A9ias%20artesanais." 
+            target="blank">Descrição da foto</a></li>
+            <br>
+        <li><a class="button" href="http://127.0.0.1:5501/index.html#:~:text=de%204%20meses.-,Habilidades,-Resili%C3%AAncia" 
+            target="blank">Link para minhas habilidades</a></li>
     </ul>
 
 
